css - form-warning color change

--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -298,7 +298,7 @@ input:focus {
 }
 
 .form-warning .form-control {
-    border: 1px solid #fb6708 !important;
+    border: 1px solid #ff9e00 !important;
 }
 
 .input-group.form-warning + label.form-warning {
@@ -337,7 +337,7 @@ label.form-warning {
     display: none;
     width: 100% !important;
     z-index: 99;
-    background: #fb6708;
+    background: #ff9e00;
 }
 
 .input-group {
