--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
@@ -55,7 +55,7 @@
         </div>
 
         <div *ngIf="!roomCategoryNotSelected" class="row">
-            <div class="col-xs-6 col-md-6 form-group">
+            <div class="col-xs-12 col-sm-6 form-group">
                 <div class="row">
                     <div class="col-xs-12 form-group">
                         <label class="control-label">{{ 'Stationary Beds' | translate }}</label>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-6 col-md-6 form-group">
+            <div class="col-xs-12 col-sm-6 form-group">
                 <div class="row">
                     <div class="col-xs-12 form-group">
                         <label class="control-label">{{ 'Rollaway Beds' | translate }}</label>
