[T239] initialized room preview

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/template/hotel-operations.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/template/hotel-operations.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 </div>
-<div class="modal-lg-body container">
+<div class="modal-lg-body container operational-page-container">
 	<room-operations-page class="full-height" 
         *ngIf="isRoomOperationsPage()"
         [roomOperationsPageParam]="currentHotelOperationsPageParam"> 
